// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormInput should render with just required props passed 1`] = `
<div
  className="formInput"
>
  <input
    id="test"
    onChange={[Function]}
    placeholder={null}
    type="text"
    value=""
  />
</div>
`;

exports[`FormInput should render with label 1`] = `
<div
  className="formInput"
>
  <label
    htmlFor="test"
  >
    Testinput
  </label>
  <input
    id="test"
    onChange={[Function]}
    placeholder={null}
    type="text"
    value=""
  />
</div>
`;
